[package]
name = "renrenyingshi"
version = "0.1.0"
edition = "2024"

[dependencies]
chardetng = {version = "0.1.17", features = ["multithreading"]}
clap = { version = "4.5.51", features = ["derive"] }
encoding_rs = "0.8.35"
glob = "0.3.3"
rayon = "1.11.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
